2008-02-15  Inge Wallin  <inge@lysator.liu.se>

	Use ViewportParams everywhere
	* src/lib/ViewportParams.{h,cpp} (planetAxis): Used to be axis
	* src/lib/ViewParams.{h,cpp} (m_viewport): New member
	(projection, radius, planetAxis): new getters/setters
	* src/lib/AbstractLayer/AbstractLayer.cpp,
	* src/lib/AbstractLayer/AbstractLayerData.cpp,
	* src/lib/AbstractScanlineTextureMapper.cpp,
	* src/lib/FlatScanlineTextureMapper.cpp,
	* src/lib/GlobeScanlineTextureMapper.cpp,
	* src/lib/GridMap.cpp,
	* src/lib/MarbleMap.cpp,
	* src/lib/MarbleModel.cpp,
	* src/lib/MeasureTool.cpp,
	* src/lib/PlaceMarkLayout.cpp,
	* src/lib/PlaceMarkPainter.cpp,
	* src/lib/TextureColorizer.cpp,
	* src/lib/VectorComposer.cpp,
	* src/lib/VectorMap.cpp:
	Use the new calls in ViewParams.

	Actually implement the methods.
	* src/lib/ViewportParams.h (ViewportParams::m_size): new member
	* src/lib/ViewportParams.cpp: Implement all functions	

	New class ViewportParams that will be used in the new
	AbstractProjection
	* src/lib/ViewportParams.h: New file
	* src/lib/ViewportParams.cpp: New file
	* src/lib/CMakeLists.txt: Include the new files

2008-02-13  Carlos Licea  <carlos.licea@kdemail.net>
    Added the Mercator Projection to the placemarks.
    *src/lib/PlaceMarkPainter.cpp: added Mercator to the switch.
    *src/lib/PlaceMarkLayout.cpp: added Mercator case to the switch
     to calculate the position of a given placemark.
    *src/lib/MarbleMap.cpp: corrected the calculation of the y in
     screenCoordinates function.

2008-02-14  Torsten Rahn  <rahn@kde.org>

    * data/placemarks/HOWTO-cities.txt:
      Added a small HOWTO for creating the kml/cache files.
    * data/placemarks/cityplacemarks.cache:
      Imported the latest czech changes.
    * data/placemarks/cityplacemarks.kml:
      generated an updated KML file from cities.txt
    * src/lib/XmlHandler.cpp:
      fixed a bug in XmlHandler which didn't honor 
      MarblePlacemarks after its introduction some time ago ("d'oh").
