@@ -1,0 +1,25 @@
+//
+// This file is part of the Marble Desktop Globe.
+//
+// This program is free software licensed under the GNU LGPL. You can
+// find a copy of this license in LICENSE.txt in the top directory of
+// the source code.
+//
+// Copyright 2007      Inge Wallin  <ingwa@kde.org>"
+//
+
+
+// Local
+#include "AbstractProjection.h"
+
+// Marble
+#include "ViewportParams.h"
+
+
+AbstractProjection::AbstractProjection()
+{
+}
+
+AbstractProjection::~AbstractProjection()
+{
+}
